--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 buildscript {
     ext.kotlin_version = "1.5.10"
     ext.KOTLIN_COROUTINES_VERSION = "1.5.1"
+    ext.nav_version = "2.3.5"
     repositories {
         google()
         mavenCentral()
